--- a/home.html
+++ b/home.html
@@ -37,19 +37,22 @@
         <!--home introduction-->
             <h1 id="hometitle">Introducing Serpentine Goods</h1>
             <p style="padding: 20px; margin-left: 8%; margin-right: 8%; 
-            background-color: rgb(203, 245, 214);
+            background-color: rgb(255, 255, 255);
             color: black; border-radius: 10px;">These products are made to cater to your needs. Serpentine goods
                 offers a variety of products to satisy your cravings. Name it, we have it,
                 only here at Serpentine Goods! You will be amazed when you taste our products. All 
                 products are made with natural ingredients. Some products can be curated in a gift 
                 box depending on the client's request. Our brand also cares about our client's overall experience
-                with our products. Please do leave a feedback under the Feedbacks page. Navigate through our nav
+                with our products. 
+                <p style="padding: 20px; margin-left: 8%; margin-right: 8%; 
+                background-color: rgb(255, 255, 255);
+                color: black; border-radius: 10px;">Please do leave a feedback under the Feedbacks page. Navigate through our nav
                 bar. Please explore our products in the products
                 section of the navigation bar. Enjoy your stay in our website. Don't forget to
                 share this to your friends. It is time for you to change your lifestyle and start eating healthy foods.
                 Here at Serpentione Goods, we can help you achieve your body goals! Our products are safe and free from preservatives.
                 Thank you for visiting our website. It means a lot to us when you are interested with our products. Please come back 
-                again. We hope to see you next time. Toodles! 
+                again. We hope to see you next time. Toodles! </p>
             </p>
             <br><br><br>
 </body>
