--- a/home.html
+++ b/home.html
@@ -43,7 +43,8 @@
                 only here at Serpentine Goods! You will be amazed when you taste our products. All 
                 products are made with natural ingredients. Some products can be curated in a gift 
                 box depending on the client's request. Our brand also cares about our client's overall experience
-                with our products. 
+                with our products.  </p>
+            <br><br><br>
                 <p style="padding: 20px; margin-left: 8%; margin-right: 8%; 
                 background-color: rgb(255, 255, 255);
                 color: black; border-radius: 10px;">Please do leave a feedback under the Feedbacks page. Navigate through our nav
@@ -53,7 +54,6 @@
                 Here at Serpentione Goods, we can help you achieve your body goals! Our products are safe and free from preservatives.
                 Thank you for visiting our website. It means a lot to us when you are interested with our products. Please come back 
                 again. We hope to see you next time. Toodles! </p>
-            </p>
             <br><br><br>
 </body>
 <footer>
